--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </svg>
           </button>
         </form>
+
         <nav class="user-nav">
           <div class="user-nav__icon-box">
             <svg class="user-nav__icon">
@@ -38,20 +39,68 @@
             </svg>
             <span class="user-nav__notification">7</span>
           </div>
-          <div class="user-nav__icon-box">
+
+          <div class="user-nav__icon-box messsge-icon">
             <svg class="user-nav__icon">
               <use xlink:href="img/sprite.svg#icon-chat" />
             </svg>
             <span class="user-nav__notification">13</span>
+
+            <div class="message-popup">
+              <h2 class="message-popup__title">Messages</h2>
+
+              <div class="message-popup__list">
+                <img
+                  src="img/user-6.jpg"
+                  alt="message photo"
+                  class="message-popup__photo"
+                />
+                <div class="message-popup__text-box">
+                  <p class="message-popup__name">Jonas Adams</p>
+                  <p class="message-popup__text">Hi there!</p>
+                </div>
+              </div>
+
+              <div class="message-popup__list">
+                <img
+                  src="img/user-3.jpg"
+                  alt="message photo"
+                  class="message-popup__photo"
+                />
+                <div class="message-popup__text-box">
+                  <p class="message-popup__name">Tim Smith</p>
+                  <p class="message-popup__text">Hello!</p>
+                </div>
+              </div>
+              <div class="message-popup__list">
+                <img
+                  src="img/user-4.jpg"
+                  alt="message photo 2"
+                  class="message-popup__photo"
+                />
+                <div class="message-popup__text-box">
+                  <p class="message-popup__name">kim Thomas</p>
+                  <p class="message-popup__text">Are you there?</p>
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="user-nav__user">
             <img
               src="img/user.jpg"
-              alt="User photo"
+              alt="User photo 3"
               class="user-nav__user-photo"
             />
             <spna class="user-nav__user-name">Jonas</spna>
+
+            <div class="user-popup">
+              <ul class="user-popup__box">
+                <li class="user-popup__list">Profile</li>
+                <li class="user-popup__list">Message</li>
+                <li class="user-popup__list">Log out</li>
+              </ul>
+            </div>
           </div>
         </nav>
       </header>
@@ -106,6 +155,9 @@
                 alt="photo of hotel 1"
                 class="gallery__photo"
               />
+              <figcaption class="gallery__caption">
+                Gorgeous hotel with amazing view.
+              </figcaption>
             </figure>
 
             <figure class="gallery__item">
@@ -114,6 +166,9 @@
                 alt="photo of hotel 2"
                 class="gallery__photo"
               />
+              <figcaption class="gallery__caption">
+                Relax by the 360°C pool.
+              </figcaption>
             </figure>
 
             <figure class="gallery__item">
@@ -122,6 +177,9 @@
                 alt="photo of hotel 3"
                 class="gallery__photo"
               />
+              <figcaption class="gallery__caption">
+                Landescape with beatuful sunsets.
+              </figcaption>
             </figure>
           </div>
 
